@startuml
'https://plantuml.com/class-diagram

interface UserDao
class User
class UserDaoImpl
class BoardPanel

UserDaoImpl..|>UserDao
UserDaoImpl-->User
BoardPanel..>UserDao


class User{
- userName:String
- rank:int
- score:int
- time :int[]
+User(int score,String userName)
+getUserRank():int
+setUserRank():void
+getUserName():String
+getUserScore():int
+gerUserTime():String
+getCurrentTime():void
}

interface UserDao{
+gerAllUsers():List<User>
+doAdd(User user):void
+doDelete(int rank):void
}
class UserDaoImpl{
- users:List<User>
+f ileName:String
+ gerAllUsers():List<User>
+ doAdd(User user):void
+ doDelete(int rank):void
}
class BoardPanel{
- createTable(int userNum):void
+ BoardPanel()
+ addName(String userName):void

}


@enduml